--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,6 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  /* align-items: center; */
 }
 
 #btns button {
@@ -36,6 +35,7 @@ h1 {
   display: block;
   border-color: black;
   border-style: solid;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
 }
@@ -44,4 +44,30 @@ h1 {
   max-width: 100%;
   max-height: 100%;
   margin: auto;
+}
+
+.form_btns {
+  padding-top: 5%;
+  margin: auto;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+input[type="submit"] {
+  display: none;
+}
+
+.img-upload {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  background-color: aquamarine;
+  border-color: rgb(0, 240, 160);
 }
