--- a/templates/local_file.html
+++ b/templates/local_file.html
@@ -8,12 +8,26 @@
 
     <form action="http://127.0.0.1:5000/uploade_image" method="POST" enctype="multipart/form-data" class="form_btns">
       <label class="img-upload">
-        <input type='file' onchange="readURL(this);" />
+        <input type='file' onchange='readURL(this);' />
         Upload Image
       </label>
       <label class="img-upload">
-        <input type = "submit" value='Identify'/>
+        <input type = "submit" value='Identify' onchange='identify(this);' />
         Identify
       </label>
     </form>
+
+    {% if prediction %}
+    <script type='text/javascript'>
+      let car = '{{ prediction }}';
+      alert('ler');
+      function print_data() {
+        var tag = car[0]['tagName'];
+        document.getElementById('tag').innerText = "Vehicle Class: " + tag;
+      }
+    </script>
+    {% endif %}
+
+    <p id='tag'></p>
+    <p id='probability'></p>
 {% endblock content %}
