--- a/templates/local_file.html
+++ b/templates/local_file.html
@@ -2,14 +2,19 @@
 {% block content %}
     <h1>Identify the Car</h1>
 
+    <!-- if statement for showing the image both right after selecting and uploading -->
     <div class="image">
       {% if img_path %}
+        <!-- image after uploaded -->
         <img id="car" src={{ img_path }} alt="uploaded image" />
       {% else %}
+        <!-- image when selected -->
         <img id="car" src="#" alt="upload an image" />
       {% endif %}
     </div>
 
+    <!-- Buttons for selecting the image file and uploading for prediction -->
+    <!-- readURL(this) direct to upload.js to present image right after selecting the image -->
     <form method="POST" action="" enctype="multipart/form-data" class="form_btns">
       <label class="img-upload">
         <input type='file' name='file' onchange='readURL(this);' />
@@ -21,11 +26,9 @@
       </label>
     </form>
 
+    <!-- Prints out the results into p tags -->
     {% if prediction %}
-      <p> Vehicle Class: {{ prediction[0]['tagName'] }} </p>
-      <p> Probability: {{ "%.2f%%"|format(prediction[0]['probability'] * 100) }} </p>
+      <p id='tag'> Vehicle Class: {{ prediction['tagName'] }} </p>
+      <p id='probability'> Probability: {{ "%.2f%%"|format(prediction['probability'] * 100) }} </p>
     {% endif %}
-
-    <p id='tag'></p>
-    <p id='probability'></p>
 {% endblock content %}
