--- a/static/style.css
+++ b/static/style.css
@@ -1,43 +1,22 @@
 body {
-  margin: auto;
+  margin: 0 auto;
   width: auto;
+  height: 100%;
   text-align: center;
   align-content: center;
-  font-family: Comic Sans MS, Textile, Cursive;
-}
-
-h1 {
-  padding: 5% 0 2% 0;
-}
-
-#btns {
-  width: 200px;
-  height: 200px;
-  margin: auto;
+  font-family: Helvetica, Verdana, sans-serif;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
-  justify-content: space-around;
-}
-
-#btns button {
-  height: 20%;
-  background-color: rgb(0, 153, 255);
-  border-color:rgb(40, 168, 253);
-  border-radius: 5px;
-  color: white;
-  font-size: 18px;
 }
 
 .image {
-  margin: auto;
-  height: 200px;
-  width: 300px;
+  height: 250px;
   display: block;
-  border-color: black;
-  border-style: solid;
   border-radius: 5px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 #car {
@@ -47,9 +26,7 @@ h1 {
 }
 
 .form_btns {
-  padding-top: 5%;
   margin: auto;
-  width: 300px;
   display: flex;
   justify-content: space-between;
 }
@@ -63,11 +40,14 @@ input[type="submit"] {
 }
 
 .img-upload {
-  border: 1px solid #ccc;
+  width: 35%;
+  border: 3px solid;
   border-radius: 5px;
-  display: inline-block;
   padding: 6px 12px;
   cursor: pointer;
-  background-color: aquamarine;
-  border-color: rgb(0, 240, 160);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(127, 240, 255);
+  border-color: rgb(0, 144, 240);
 }
