--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,17 @@
 body {
-  margin: 0 auto;
-  width: auto;
-  height: 100%;
-  text-align: center;
   align-content: center;
-  font-family: Helvetica, Verdana, sans-serif;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
 
+#h1-style {
+  height: 50px;
+}
+
 .image {
   height: 250px;
   display: block;
-  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,29 +23,12 @@ body {
   margin: auto;
 }
 
-.form_btns {
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-}
-
+/* Hides the original input tag format */
 input[type="file"] {
   display: none;
 }
 
+/* Hides the original input tag format */
 input[type="submit"] {
   display: none;
-}
-
-.img-upload {
-  width: 35%;
-  border: 3px solid;
-  border-radius: 5px;
-  padding: 6px 12px;
-  cursor: pointer;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: rgb(127, 240, 255);
-  border-color: rgb(0, 144, 240);
 }
